--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <version>RELEASE</version>
+            <version>0.9.1</version>
         </dependency>
     </dependencies>
 
