--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,12 @@ spring:
   profiles:
     active: dev #默认为开发环境
   thymeleaf:
-      suffix: .html
       enabled: true
+      suffix: .html
 server:
   port: 8888
+  error:
+    path: /error
 
 mybatis:
   configuration:
