--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,5 +18,5 @@ mybatis:
 jwt:
   tokenHeader: Authorization #JWT存储的请求头
   secret: mySecret #JWT加解密使用的密钥
-  expiration: 60 #JWT的超期限时间(60*60*24)
+  expiration: 60*60 #JWT的超期限时间(60*60*24)
   tokenHead: Bearer  #JWT负载中拿到开头
