--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,20 @@ spring:
   profiles:
     active: dev #默认为开发环境
   thymeleaf:
-      enabled: true
-      suffix: .html
+    enabled: true
+    suffix: .html
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    timeout: 3000
+    database: 0
+    jedis:
+      pool:
+        max-wait: -1        #连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-active: 8    #连接池最大连接数（使用负值表示没有限制）
+        max-idle: 8      #连接池中的最大空闲连接
+        min-idle: 0     #连接池中的最小空闲连接
 server:
   port: 8888
   error:
